--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@chakra-ui/react": "^2.7.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
     "@radix-ui/react-context-menu": "^2.1.5",
     "@tremor/react": "^3.11.1",
     "@types/webrtc": "^0.0.41",
-    "chart.js": "^4.1.2",
+    "chart.js": "^4.4.1",
     "firebase": "^9.14.0",
     "flowbite": "^1.5.4",
     "flowbite-react": "^0.3.5",
